Updated minigame and it's controller